# Lazarus-X11-Examples

./: .gitignore  SSH-Server_einrichten.md  bitmapTools.md  blabla.txt  darg_and_drop.md  drag_and_drop.md  font.md  readme.md  wiki.md  xtool.md  xtool_2.md
xforms/xforms-1.2.5pre1/: ChangeLog  Copyright  INSTALL  INSTALL.git  Makefile  Makefile.am  Makefile.in  README  README.rpmbuild  acinclude.m4  aclocal.m4  autogen.sh  config.status  configure  configure.ac  libforms.spec  libforms.spec.in  libtool
xforms/xforms-1.2.5pre1/autom4te.cache/: output.1  requests  traces.0  traces.1  traces.2
xforms/xforms-1.2.5pre1/config/: Makefile  Makefile.am  Makefile.in  common.am  xformsinclude.m4
xforms/xforms-1.2.5pre1/demos/: Makefile  Makefile.am  Makefile.in  Readme  arrowbutton.c  borderwidth.c  boxtype.c  browserall.c  browserop.c  buttonall.c  butttypes.c  canvas.c  chartall.c  chartstrip.c  choice.c  colbrowser.c  colorwheel.xpm  colsel.c  colsel1.c  counter.c  crossbut.c  crossbut.h  cursor.c  demo.c  demo.menu  demo05.c  demo06.c  demo27.c  demo33.c  demotest.c  demotest2.c  demotest3.c  dirlist.c  fbrowse.c  fbrowse1.c  fdial.c  flclock.c  folder.c  fonts.c  formbrowser.c  (+67 more)
xforms/xforms-1.2.5pre1/demos/fd/: Makefile  Makefile.am  Makefile.in  buttons_gui.fd  butttypes_gui.fd  fbtest_gui.fd  folder_gui.fd  formbrowser_gui.fd  ibrowser_gui.fd  inputall_gui.fd  is_gui.fd  pmbrowse_gui.fd  scrollbar_gui.fd  twheel_gui.fd
xforms/xforms-1.2.5pre1/doc/: Makefile  Makefile.am  Makefile.in  part0_preface.texi  part1.texi  part1_defining_forms.texi  part1_doing_interaction.texi  part1_free_objects.texi  part1_getting_started.texi  part1_goodies.texi  part1_introduction.texi  part2.texi  part2_command_line.texi  part2_creating_forms.texi  part2_generating_hardcopies.texi  part2_getting_started.texi  part2_introduction.texi  part2_language_filters.texi  part2_saving_loading.texi  part3.texi  part3_buttons.texi  part3_choice_objects.texi  part3_container_objects.texi  part3_deprecated_objects.texi  part3_input_objects.texi  part3_introduction.texi  part3_other_objects.texi  part3_popups.texi  part3_static_objects.texi  part3_valuator_objects.texi  part4.texi  part4_an_example.texi  part4_drawing_objects.texi  part4_events.texi  part4_fl_object.texi  part4_global_structure.texi  part4_introduction.texi  part4_new_buttons.texi  part4_preemptive_handler.texi  part5.texi  (+20 more)
xforms/xforms-1.2.5pre1/doc/xforms_images/: Makefile  Makefile.am  Makefile.in
xforms/xforms-1.2.5pre1/fd2ps/: Makefile  Makefile.am  Makefile.in  align.c  fd2ps.c  fd2ps.h  fd2ps.man  flsupport.c  global.h  image2ps.c  load.c  papers.c  pscol.c  psdraw.c  psobj.c  pstext.c  readxpm.c  sys.c  version.c  xbmtops.c  xpmtops.c
xforms/xforms-1.2.5pre1/fd2ps/test/: Makefile  Makefile.am  Makefile.in
xforms/xforms-1.2.5pre1/fdesign/: Makefile  Makefile.am  Makefile.in  fd_attribs.c  fd_control.c  fd_fake.c  fd_file.c  fd_file_fun.c  fd_forms.c  fd_groups.c  fd_help.c  fd_help.h  fd_iconinfo.c  fd_iconinfo.h  fd_initforms.c  fd_main.c  fd_main.h  fd_names.c  fd_objects.c  fd_pallette.c  fd_printC.c  fd_rubber.c  fd_select.c  fd_spec.c  fd_spec.h  fd_super.c  fd_util.c  fdesign.man  sp_browser.c  sp_browser.h  sp_button.c  sp_button.h  sp_choice.c  sp_choice.h  sp_counter.c  sp_counter.h  sp_dial.c  sp_dial.h  sp_freeobj.c  sp_freeobj.h  (+17 more)
xforms/xforms-1.2.5pre1/fdesign/.deps/: fd_attribs.Po  fd_control.Po  fd_fake.Po  fd_file.Po  fd_file_fun.Po  fd_forms.Po  fd_groups.Po  fd_help.Po  fd_iconinfo.Po  fd_initforms.Po  fd_main.Po  fd_names.Po  fd_objects.Po  fd_pallette.Po  fd_printC.Po  fd_rubber.Po  fd_select.Po  fd_spec.Po  fd_super.Po  fd_util.Po  sp_browser.Po  sp_button.Po  sp_choice.Po  sp_counter.Po  sp_dial.Po  sp_freeobj.Po  sp_menu.Po  sp_pixmap.Po  sp_positioner.Po  sp_scrollbar.Po  sp_slider.Po  sp_spinner.Po  sp_twheel.Po  sp_util.Po  sp_xyplot.Po
xforms/xforms-1.2.5pre1/fdesign/fd/: Makefile  Makefile.am  Makefile.in  pallette.c  pallette.fd  pallette.h  ui_attrib.c  ui_attrib.fd  ui_attrib.h  ui_theforms.c  ui_theforms.fd  ui_theforms.h
xforms/xforms-1.2.5pre1/fdesign/notes/: spec_algo
xforms/xforms-1.2.5pre1/fdesign/spec/: Makefile  Makefile.am  Makefile.in  Readme  browser_spec.c  browser_spec.fd  browser_spec.h  button_spec.c  button_spec.fd  button_spec.h  choice_spec.c  choice_spec.fd  choice_spec.h  counter_spec.c  counter_spec.fd  counter_spec.h  dial_spec.c  dial_spec.fd  dial_spec.h  freeobj_spec.c  freeobj_spec.fd  freeobj_spec.h  menu_spec.c  menu_spec.fd  menu_spec.h  pixmap_spec.c  pixmap_spec.fd  pixmap_spec.h  positioner_spec.c  positioner_spec.fd  positioner_spec.h  scrollbar_spec.c  scrollbar_spec.fd  scrollbar_spec.h  slider_spec.c  slider_spec.fd  slider_spec.h  spinner_spec.c  spinner_spec.fd  spinner_spec.h  (+6 more)
xforms/xforms-1.2.5pre1/fdesign/xpm/: Makefile  Makefile.am  Makefile.in  broken.xbm  broken.xpm  lightb.xpm
xforms/xforms-1.2.5pre1/fonts/: Makefile  Makefile.in
xforms/xforms-1.2.5pre1/fonts/FPL_Neu/: Makefile  Makefile.in
xforms/xforms-1.2.5pre1/gl/: Makefile  Makefile.am  Makefile.in  glcanvas.c  glcanvas.lo  libformsGL.la
xforms/xforms-1.2.5pre1/gl/.deps/: glcanvas.Plo
xforms/xforms-1.2.5pre1/gl/.libs/: libformsGL.la  libformsGL.lai  libformsGL.so.2  libformsGL.so.2.1.5
xforms/xforms-1.2.5pre1/image/: Makefile  Makefile.am  Makefile.in  flimage_int.h  image.c  image.lo  image_bmp.c  image_bmp.lo  image_combine.c  image_combine.lo  image_convolve.c  image_convolve.lo  image_crop.c  image_crop.lo  image_disp.c  image_disp.lo  image_fits.c  image_fits.lo  image_genesis.c  image_genesis.lo  image_gif.c  image_gif.lo  image_gzip.c  image_gzip.lo  image_io_filter.c  image_io_filter.lo  image_jpeg.c  image_jpeg.lo  image_jquant.c  image_jquant.lo  image_marker.c  image_marker.lo  image_png.c  image_png.lo  image_pnm.c  image_pnm.lo  image_postscript.c  image_postscript.lo  image_proc.c  image_proc.lo  (+34 more)
xforms/xforms-1.2.5pre1/image/.deps/: image.Plo  image_bmp.Plo  image_combine.Plo  image_convolve.Plo  image_crop.Plo  image_disp.Plo  image_fits.Plo  image_genesis.Plo  (+27 more)
(+2311 files in other folders)
