include $(top_srcdir)/config/common.am

EXTRA_DIST = common.am config.guess config.sub cygwin.m4 depcomp \
			 libtool.m4 ltmain.sh xformsinclude.m4 install-sh missing

MAINTAINERCLEANFILES += config.guess config.sub install-sh libtool.m4 \
						ltmain.sh lt~obsolete.m4 ltoptions.m4 ltsugar.m4 \
						ltversion.m4 depcomp missing
