include $(top_srcdir)/config/common.am

CLEANFILES = *.bak *.[ch]

INCLUDE = $(top_srcdir)/lib

EXTRA_DIST = \
	dim_porsche.xpm \
	porsche.xpm \
	buttons_gui.fd \
	butttypes_gui.fd \
	fbtest_gui.fd \
	folder_gui.fd \
	formbrowser_gui.fd \
	ibrowser_gui.fd \
	inputall_gui.fd \
	is_gui.fd \
	pmbrowse_gui.fd \
	scrollbar_gui.fd \
	twheel_gui.fd
